Correctly use the top level liquibase aggregator pom

--- a/liquibase-integration-tests/pom.xml
+++ b/liquibase-integration-tests/pom.xml
@@ -6,7 +6,7 @@
     <name>Liquibase Integration Tests</name>
 
     <parent>
-        <artifactId>liquibase-parent</artifactId>
+        <artifactId>liquibase</artifactId>
         <groupId>org.liquibase</groupId>
         <version>2.0.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
