--- a/liquibase-core/pom.xml
+++ b/liquibase-core/pom.xml
@@ -5,7 +5,7 @@
   <name>Liquibase Core</name>
   <parent>
     <groupId>org.liquibase</groupId>
-    <artifactId>liquibase-parent</artifactId>
+    <artifactId>liquibase</artifactId>
     <version>2.0.2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
