--- a/liquibase-maven-plugin/pom.xml
+++ b/liquibase-maven-plugin/pom.xml
@@ -6,7 +6,7 @@
   <name>Liquibase Maven Plugin</name>
   <description>A Maven plugin wraps up some of the functionality of Liquibase</description>
   <parent>
-    <artifactId>liquibase-parent</artifactId>
+    <artifactId>liquibase</artifactId>
     <groupId>org.liquibase</groupId>
     <version>2.0.2-SNAPSHOT</version>
   </parent>
