--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>2.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>Liquibase Parent</name>
+  <name>Liquibase</name>
   <description>Liquibase is a tool for managing and executing database changes.</description>
   <url>http://www.liquibase.org</url>
 
