--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -7,7 +7,7 @@
   <name>Liquibase Samples</name>
   <parent>
     <groupId>org.liquibase</groupId>
-    <artifactId>liquibase-parent</artifactId>
+    <artifactId>liquibase</artifactId>
     <version>2.0.2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
