--- a/liquibase-core/pom.xml
+++ b/liquibase-core/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>liquibase-core</artifactId>
   <name>Liquibase Core</name>
   <parent>
-    <groupId>org.liquibase</groupId>
+    <groupId>org.kuali.db.liquibase</groupId>
     <artifactId>liquibase</artifactId>
     <version>2.0.2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
