--- a/liquibase-maven-plugin/pom.xml
+++ b/liquibase-maven-plugin/pom.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>liquibase-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Liquibase Maven Plugin</name>
   <description>A Maven plugin wraps up some of the functionality of Liquibase</description>
   <parent>
+    <groupId>org.kuali.db.liquibase</groupId>
     <artifactId>liquibase</artifactId>
-    <groupId>org.liquibase</groupId>
     <version>2.0.2-SNAPSHOT</version>
   </parent>
   <dependencies>
