--- a/pom.xml
+++ b/pom.xml
@@ -1,38 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>org.liquibase</groupId>
+  <parent>
+    <groupId>org.kuali</groupId>
+    <artifactId>kuali-common</artifactId>
+    <version>18</version>
+  </parent>
+  <groupId>org.kuali.db.liquibase</groupId>
   <artifactId>liquibase</artifactId>
   <version>2.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
-
   <name>Liquibase</name>
   <description>Liquibase is a tool for managing and executing database changes.</description>
   <url>http://www.liquibase.org</url>
-
   <organization>
     <name>Liquibase.org</name>
     <url>http://www.liquibase.org</url>
   </organization>
-
   <licenses>
     <license>
       <url>http://www.apache.org/licenses/LICENSE-2.0</url>
       <name>Apache License, Version 2.0</name>
     </license>
   </licenses>
-
   <issueManagement>
     <url>http://liquibase.jira.com/browse/CORE</url>
   </issueManagement>
-
   <scm>
     <url>https://github.com/jcaddel/liquibase</url>
     <connection>scm:git:git://github.com:jcaddel/liquibase.git</connection>
     <developerConnection>scm:git:git://github.com:jcaddel/liquibase.git</developerConnection>
   </scm>
-
   <developers>
     <developer>
       <id>nvoxland</id>
@@ -56,56 +54,42 @@
       <timezone>-7</timezone>
     </developer>
   </developers>
-
-  <properties>
-    <maven.build.timestamp.format>E MMM dd hh:mm:ss zzz yyyy</maven.build.timestamp.format>
-    <build.timestamp>${maven.build.timestamp}</build.timestamp>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
   <modules>
     <module>liquibase-core</module>
     <module>liquibase-maven-plugin</module>
     <module>samples</module>
     <module>liquibase-integration-tests</module>
   </modules>
-
   <dependencyManagement>
     <dependencies>
-
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-api</artifactId>
         <version>2.0</version>
       </dependency>
-
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-project</artifactId>
         <version>2.0</version>
       </dependency>
-
       <dependency>
         <groupId>org.apache.maven.shared</groupId>
         <artifactId>maven-plugin-testing-harness</artifactId>
         <version>1.1</version>
         <scope>test</scope>
       </dependency>
-
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.8.1</version>
         <scope>test</scope>
       </dependency>
-
       <dependency>
         <groupId>org.easymock</groupId>
         <artifactId>easymockclassextension</artifactId>
         <version>2.2</version>
         <scope>test</scope>
       </dependency>
-
       <dependency>
         <groupId>ant</groupId>
         <artifactId>ant</artifactId>
@@ -113,7 +97,6 @@
         <scope>provided</scope>
         <optional>true</optional>
       </dependency>
-
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>servlet-api</artifactId>
@@ -121,7 +104,6 @@
         <scope>provided</scope>
         <optional>true</optional>
       </dependency>
-
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring</artifactId>
@@ -129,14 +111,12 @@
         <scope>provided</scope>
         <optional>true</optional>
       </dependency>
-
       <dependency>
         <groupId>org.apache.maven.shared</groupId>
         <artifactId>maven-verifier</artifactId>
         <version>1.2</version>
         <scope>test</scope>
       </dependency>
-
       <!-- JDBC drivers -->
       <dependency>
         <groupId>hsqldb</groupId>
@@ -144,52 +124,17 @@
         <version>1.8.0.7</version>
         <scope>test</scope>
       </dependency>
-
       <dependency>
         <groupId>org.apache.derby</groupId>
         <artifactId>derby</artifactId>
         <version>10.2.2.0</version>
         <scope>test</scope>
       </dependency>
-
     </dependencies>
   </dependencyManagement>
-
   <build>
     <pluginManagement>
       <plugins>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>2.3.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.7</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <configuration>
-            <encoding>UTF-8</encoding>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-            <source>1.5</source>
-            <target>1.5</target>
-            <optimize>true</optimize>
-            <debug>true</debug>
-            <encoding>${project.build.sourceEncoding}</encoding>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.7.1</version>
-          <configuration>
-            <redirectTestOutputToFile>true</redirectTestOutputToFile>
-            <reportFormat>plain</reportFormat>
-          </configuration>
-        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
@@ -210,102 +155,7 @@
             </execution>
           </executions>
         </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.4</version>
-        </plugin>
-
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-release-plugin</artifactId>
-          <version>2.0</version>
-          <configuration>
-            <stagingRepository>/tmp/maven-snapshot</stagingRepository>
-            <mavenExecutorId>forked-path</mavenExecutorId>
-          </configuration>
-        </plugin>
-
-
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.5</version>
-          <configuration>
-            <skip>false</skip>
-          </configuration>
-        </plugin>
       </plugins>
-
     </pluginManagement>
-
   </build>
-
-  <reporting>
-    <plugins>
-      <!--<plugin> -->
-      <!--<groupId>org.apache.maven.plugins</groupId> -->
-      <!--<artifactId>maven-project-info-reports-plugin</artifactId> -->
-      <!--<configuration> -->
-      <!--<dependencyLocationsEnabled>false</dependencyLocationsEnabled> -->
-      <!--<dependencyDetailsEnabled>false</dependencyDetailsEnabled> -->
-      <!--</configuration> -->
-      <!--</plugin> -->
-      <!--
-        <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <version>2.3</version>
-        </plugin>
-      -->
-
-
-    </plugins>
-  </reporting>
-
-  <distributionManagement>
-    <repository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>sonatype-nexus-staging</id>
-      <name>Sonatype Production Repository</name>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-
-    </repository>
-    <snapshotRepository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Sontatype Snapshot Repository</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
-
-  <profiles>
-    <profile>
-      <id>release-sign-artifacts</id>
-      <activation>
-        <property>
-          <name>performRelease</name>
-          <value>true</value>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
-
 </project>
