--- a/samples/liquibase-ext-sqlgenerator/pom.xml
+++ b/samples/liquibase-ext-sqlgenerator/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>liquibase-ext-sqlgenerator</artifactId>
   <name>Liquibase Extension - SQL Generator</name>
   <parent>
-    <groupId>org.liquibase.samples</groupId>
+    <groupId>org.kuali.db.liquibase</groupId>
     <artifactId>liquibase-samples</artifactId>
     <version>2.0.2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
