Update <groupId>org.liquibase</groupId> to <groupId>org.kuali.db.liquibase</groupId>

--- a/liquibase-integration-tests/pom.xml
+++ b/liquibase-integration-tests/pom.xml
@@ -36,12 +36,12 @@
     </dependency>
 
     <dependency>
-      <groupId>org.liquibase</groupId>
+      <groupId>org.kuali.db.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.liquibase</groupId>
+      <groupId>org.kuali.db.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
       <version>${project.version}</version>
       <type>test-jar</type>
@@ -49,19 +49,19 @@
     </dependency>
     <!-- sample extensions -->
     <dependency>
-      <groupId>org.liquibase.samples</groupId>
+      <groupId>org.kuali.db.liquibase.samples</groupId>
       <artifactId>liquibase-ext-change</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.liquibase.samples</groupId>
+      <groupId>org.kuali.db.liquibase.samples</groupId>
       <artifactId>liquibase-ext-changewithnestedtags</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.liquibase.samples</groupId>
+      <groupId>org.kuali.db.liquibase.samples</groupId>
       <artifactId>liquibase-ext-sqlgenerator</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
