--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -17,7 +17,7 @@
   </modules>
   <dependencies>
     <dependency>
-      <groupId>org.liquibase</groupId>
+      <groupId>org.kuali.db.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
       <version>${project.version}</version>
     </dependency>
