--- a/liquibase-integration-tests/src/test/filtered-resources/maven/pom.xml
+++ b/liquibase-integration-tests/src/test/filtered-resources/maven/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.liquibase</groupId>
+    <groupId>org.kuali.db.liquibase</groupId>
     <artifactId>liquibase-maven-integration-tests</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -10,7 +10,7 @@
     <url>http://www.liquibase.org</url>
     <dependencies>
         <dependency>
-            <groupId>org.liquibase</groupId>
+            <groupId>org.kuali.db.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -19,7 +19,7 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.liquibase</groupId>
+                <groupId>org.kuali.db.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>${project.version}</version>
 				<dependencies>
