--- a/samples/liquibase-ext-change/pom.xml
+++ b/samples/liquibase-ext-change/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.kuali.db.liquibase</groupId>
     <artifactId>liquibase-samples</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 </project>
