--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.kuali.db.liquibase</groupId>
   <artifactId>liquibase</artifactId>
-  <version>2.0.2</version>
+  <version>2.0.3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Liquibase</name>
   <description>Liquibase is a tool for managing and executing database changes. </description>
