--- a/liquibase-core/pom.xml
+++ b/liquibase-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.kuali.db.liquibase</groupId>
     <artifactId>liquibase</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.0.3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <properties>
