--- a/liquibase-maven-plugin/pom.xml
+++ b/liquibase-maven-plugin/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.kuali.db.liquibase</groupId>
     <artifactId>liquibase</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.0.3</version>
   </parent>
   <dependencies>
     <dependency>
