--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
   </developers>
   <modules>
     <module>liquibase-core</module>
+    <module>liquibase-ext</module>
     <module>liquibase-maven-plugin</module>
     <module>samples</module>
     <module>liquibase-integration-tests</module>
