Add --workingDir param so Liquibase can generate change logs with a pointer to a CSV file with data in it using classpath: notation instead of the absolute path of the file on the file system where the data was generated

--- a/liquibase-ext/pom.xml
+++ b/liquibase-ext/pom.xml
@@ -12,6 +12,10 @@
   <name>Liquibase Extensions</name>
   <dependencies>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
