--- a/liquibase-core/pom.xml
+++ b/liquibase-core/pom.xml
@@ -14,6 +14,10 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
