--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kuali</groupId>
+    <groupId>org.kuali.pom</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>18</version>
+    <version>1.0.26</version>
   </parent>
   <groupId>org.kuali.db.liquibase</groupId>
   <artifactId>liquibase</artifactId>
@@ -18,23 +18,16 @@
     <name>Liquibase.org</name>
     <url>http://www.liquibase.org</url>
   </organization>
-  <licenses>
-    <license>
-      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
-      <name>Apache License, Version 2.0</name>
-    </license>
-  </licenses>
-  <issueManagement>
-    <url>http://liquibase.jira.com/browse/CORE</url>
-  </issueManagement>
   <scm>
     <connection>scm:git:git@github.com:jcaddel/liquibase.git</connection>
     <url>scm:git:git@github.com:jcaddel/liquibase.git</url>
     <developerConnection>scm:git:git@github.com:jcaddel/liquibase.git</developerConnection>
   </scm>
   <properties>
+    <slf4j.version>1.6.4</slf4j.version>
     <oracle.version>10.2.0.3.0</oracle.version>
     <mysql.version>5.1.13</mysql.version>
+    <spring.version>3.1.0.RELEASE</spring.version>
   </properties>
   <developers>
     <developer>
@@ -63,10 +56,10 @@
     <module>liquibase-core</module>
     <module>liquibase-ext</module>
     <module>liquibase-maven-plugin</module>
-    <!-- 
-    <module>samples</module>
-    <module>liquibase-integration-tests</module>
-     -->
+    <!--
+      <module>samples</module>
+      <module>liquibase-integration-tests</module>
+    -->
   </modules>
   <dependencyManagement>
     <dependencies>
@@ -77,18 +70,13 @@
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
-        <artifactId>maven-plugin-api</artifactId>
-        <version>2.0</version>
+        <artifactId>maven-compat</artifactId>
+        <version>3.0.3</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.maven</groupId>
-        <artifactId>maven-project</artifactId>
-        <version>2.0</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven.shared</groupId>
+        <groupId>org.apache.maven.plugin-testing</groupId>
         <artifactId>maven-plugin-testing-harness</artifactId>
-        <version>1.1</version>
+        <version>2.0-alpha-1</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -119,10 +107,14 @@
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
-        <artifactId>spring</artifactId>
-        <version>2.0.6</version>
-        <scope>provided</scope>
-        <optional>true</optional>
+        <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.maven.shared</groupId>
@@ -155,16 +147,29 @@
         <version>${oracle.version}</version>
         <scope>test</scope>
       </dependency>
+      <!-- Logging -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>${slf4j.version}</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>${slf4j.version}</version>
+        <scope>runtime</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
     <pluginManagement>
       <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-release-plugin</artifactId>
-          <version>2.2.1</version>
-        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
@@ -186,26 +191,12 @@
             </execution>
           </executions>
         </plugin>
-        <plugin>
-          <groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
-          <artifactId>maven-svn-revision-number-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>generate-svn-info</id>
-              <phase>none</phase>
-            </execution>
-          </executions>
-        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
-        <artifactId>maven-svn-revision-number-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
